--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <script type="text/x-template" id="todoapp-template">
     <section>
-      <h1 data-cy="app-title">todos</h1>
+      <h1 data-cy="app-title">todos-testing</h1>
       <div class="todoapp">
         <header class="header">
           <input id="add-todo" class="new-todo" autocomplete="off" placeholder="What needs to be done?" :value="newTodo" @input="setNewTodo" @keyup.enter="addTodo">
